Update HideComment.java