@@ -8,6 +8,11 @@ import edu.training.news_portal.service.CommentService;
 import edu.training.news_portal.service.ServiceException;
 import edu.training.news_portal.service.ServiceProvider;
 import edu.training.news_portal.web.Command;
+import edu.training.news_portal.web.RequestPath;
+import edu.training.news_portal.web.constant.MessageText;
+import edu.training.news_portal.web.constant.RequestAttr;
+import edu.training.news_portal.web.constant.RequestParam;
+import edu.training.news_portal.web.util.NavigationUtil;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
@@ -21,45 +26,40 @@ public class HideComment implements Command {
 	public void execute(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
 		HttpSession session = request.getSession(false);
 		if (session == null) {
-			throw new IllegalStateException("User is not authenticated");
+			NavigationUtil.redirectWithMessage(response, RequestPath.PAGE_AUTH, MessageText.PLEASE_SIGN_IN);
+			return;
 		}
 
-		User user = (User) session.getAttribute("auth");
+		User user = (User) session.getAttribute(RequestAttr.AUTH_USER);
 		if (user == null) {
-			throw new IllegalStateException("User is not authenticated");
+			NavigationUtil.redirectWithMessage(response, RequestPath.PAGE_AUTH, MessageText.PLEASE_SIGN_IN);
+			return;
 		}
 
-		if (!(user.getRole() == Role.ADMINISTRATOR)) {
-			throw new IllegalStateException("You don’t have permission to perform this action");
+		if (user.getRole() != Role.ADMINISTRATOR) {
+			NavigationUtil.redirectWithMessage(response, RequestPath.PAGE_USER_HOME, MessageText.NO_PERMISSION);
+			return;
 		}
 
-		String commentId = request.getParameter("commentId");
+		String commentIdStr = request.getParameter(RequestParam.COMMENT_ID);
+		String newsIdStr = request.getParameter(RequestParam.NEWS_ID);
 
-		if (commentId == null || commentId.trim().isEmpty()) {
-			throw new IllegalArgumentException("Commentaries ID is missing.");
+		if (commentIdStr == null || commentIdStr.isBlank() || newsIdStr == null || newsIdStr.isBlank()) {
+			NavigationUtil.redirectWithMessage(response, RequestPath.PAGE_USER_HOME, MessageText.INVALID_REQUEST);
+			return;
 		}
-
-		String newsId = request.getParameter("newsId");
-		if (newsId == null || newsId.trim().isEmpty()) {
-			throw new IllegalArgumentException("News ID is missing.");
-		}
-
-		int commentariesId;
-		int Id;
 
 		try {
-			commentariesId = Integer.parseInt(commentId);
-			Id = Integer.parseInt(newsId);
+			int commentId = Integer.parseInt(commentIdStr);
+			int newsId = Integer.parseInt(newsIdStr);
 
-			service.hideComment(commentariesId);
+			service.hideComment(commentId);
 
+			NavigationUtil.redirectWithParam(response, RequestPath.PAGE_NEWS, RequestParam.NEWS_ID, newsId);
 		} catch (NumberFormatException e) {
-			throw new IllegalArgumentException("Invalid comment or news ID format.", e);
+			NavigationUtil.redirectWithMessage(response, RequestPath.PAGE_USER_HOME, MessageText.INVALID_REQUEST);
 		} catch (ServiceException e) {
-			throw new ServletException("Failed to hide comment.", e);
+			throw new ServletException(MessageText.UNKNOWN_ERROR, e);
 		}
-
-		response.sendRedirect("Controller?command=page_news&newsId=" + Id);
 	}
-
 }
